--- a/index.html
+++ b/index.html
@@ -30,106 +30,86 @@
 
   <script>
     const objects = [
-  "door",
-  "pillow",
-  "glass",
-  "clock",
-  "phone",
-  "flower",
+  "dress",
   "mirror",
+  "pillow",
+  "bottle",
+  "clock",
+  "window",
+  "flower",
   "train",
+  "river",
   "candle",
   "mask",
   "radio",
-  "bottle",
-  "skyline",
-  "river",
-  "knife",
-  "station",
-  "cottage",
-  "alley",
-  "bridge",
-  "shadow",
-  "lantern",
-  "lighthouse",
-  "cathedral",
-  "goblet",
-  "feather",
-  "forest",
-  "veil",
-  "harbor",
-  "comet",
-  "typewriter",
-  "harp",
-  "gargoyle",
-  "teacup",
-  "window",
-  "storm",
-  "vine",
-  "meadow",
-  "tower",
-  "hollow",
-  "bell",
-  "catacomb",
-  "cavern",
-  "diary",
-  "flame",
-  "sand",
-  "sundial",
-  "star",
-  "crystal",
-  "labyrinth",
-  "wing",
-  "halo",
-  "devil",
-  "angel",
-  "puppet",
-  "clown",
-  "ghost",
-  "beast",
-  "oracle",
-  "witch",
-  "moth",
-  "serpent",
-  "moon",
-  "sun",
-  "cloud",
-  "ember",
-  "fog",
-  "thorn",
-  "crown",
-  "spell",
-  "siren",
-  "echo",
-  "phantom",
-  "rose",
-  "quill",
-  "ember",
-  "veil",
-  "hunter",
-  "seer",
-  "wanderer",
-  "minotaur",
-  "carousel",
-  "bone",
-  "relic",
-  "banshee",
-  "twig",
-  "flute",
-  "lanternfish",
-  "chimera",
-  "statue",
-  "rune",
-  "tomb",
-  "dagger",
-  "key",
-  "ladder",
+  "phone",
+  "door",
+  "glass",
   "hat",
-  "cloak",
+  "shoe",
   "book",
-  "scroll",
-  "pendulum",
-  "maskmaker"
+  "key",
+  "teacup",
+  "letter",
+  "rose",
+  "perfume",
+  "waltz",
+  "violin",
+  "balcony",
+  "champagne",
+  "garden",
+  "kiss",
+  "silk",
+  "blush",
+  "handkerchief",
+  "poem",
+  "lullaby",
+  "bouquet",
+  "heart",
+  "embrace",
+  "locket",
+  "chandelier",
+  "petal",
+  "catacomb",
+  "gargoyle",
+  "dagger",
+  "banshee",
+  "raven",
+  "crypt",
+  "veil",
+  "phantom",
+  "shadow",
+  "tomb",
+  "statue",
+  "hollow",
+  "cauldron",
+  "claw",
+  "bone",
+  "flame",
+  "serpent",
+  "grimoire",
+  "noose",
+  "moon",
+  "robot",
+  "drone",
+  "neon",
+  "antenna",
+  "cyborg",
+  "chip",
+  "raygun",
+  "console",
+  "data shard",
+  "satellite",
+  "signal",
+  "laser",
+  "circuit",
+  "hovercraft",
+  "holoscreen",
+  "android",
+  "scanner",
+  "reactor",
+  "portal",
+  "drivesuit"
 ];
 
     const sounds = [
