--- a/index.html
+++ b/index.html
@@ -2,14 +2,60 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Whimsical Wordplayer</title>
   <style>
-    body { font-family: monospace; background:#111; color:#eee; display:flex; flex-direction:column; align-items:center; padding:40px; }
-    button { margin:10px; padding:10px 20px; font-size:16px; background:#333; color:#fff; border:none; border-radius:6px; cursor:pointer; }
-    button:hover { background:#555; }
-    #result { margin-top:30px; font-size:20px; font-weight:bold; max-width: 600px; text-align: center; white-space: pre-line; }
-    p.description { max-width:700px; text-align:center; font-size:14px; color:#bbb; margin-top:10px; line-height:1.4em; }
-    p.example { font-size:14px; color:#999; margin-top:6px; font-style:italic; }
+    body {
+      font-family: monospace;
+      background:#111;
+      color:#eee;
+      display:flex;
+      flex-direction:column;
+      align-items:center;
+      padding:20px;
+      margin: 0;
+    }
+    button {
+      margin:10px;
+      padding:12px 20px;
+      font-size:16px;
+      background:#333;
+      color:#fff;
+      border:none;
+      border-radius:6px;
+      cursor:pointer;
+      width: 90%;
+      max-width: 300px;
+    }
+    button:hover {
+      background:#555;
+    }
+    #result {
+      margin-top:30px;
+      font-size:18px;
+      font-weight:bold;
+      max-width: 95%;
+      text-align: center;
+      white-space: pre-line;
+    }
+    p.description {
+      max-width:95%;
+      text-align:center;
+      font-size:14px;
+      color:#bbb;
+      margin-top:10px;
+      line-height:1.4em;
+    }
+    p.example {
+      font-size:14px;
+      color:#999;
+      margin-top:6px;
+      font-style:italic;
+    }
+    h1 {
+      font-size: 24px;
+      text-align: center;
+    }
   </style>
 </head>
 <body>
@@ -30,87 +76,15 @@
 
   <script>
     const objects = [
-  "dress",
-  "mirror",
-  "pillow",
-  "bottle",
-  "clock",
-  "window",
-  "flower",
-  "train",
-  "river",
-  "candle",
-  "mask",
-  "radio",
-  "phone",
-  "door",
-  "glass",
-  "hat",
-  "shoe",
-  "book",
-  "key",
-  "teacup",
-  "letter",
-  "rose",
-  "perfume",
-  "waltz",
-  "violin",
-  "balcony",
-  "champagne",
-  "garden",
-  "kiss",
-  "silk",
-  "blush",
-  "handkerchief",
-  "poem",
-  "lullaby",
-  "bouquet",
-  "heart",
-  "embrace",
-  "locket",
-  "chandelier",
-  "petal",
-  "catacomb",
-  "gargoyle",
-  "dagger",
-  "banshee",
-  "raven",
-  "crypt",
-  "veil",
-  "phantom",
-  "shadow",
-  "tomb",
-  "statue",
-  "hollow",
-  "cauldron",
-  "claw",
-  "bone",
-  "flame",
-  "serpent",
-  "grimoire",
-  "noose",
-  "moon",
-  "robot",
-  "drone",
-  "neon",
-  "antenna",
-  "cyborg",
-  "chip",
-  "raygun",
-  "console",
-  "data shard",
-  "satellite",
-  "signal",
-  "laser",
-  "circuit",
-  "hovercraft",
-  "holoscreen",
-  "android",
-  "scanner",
-  "reactor",
-  "portal",
-  "drivesuit"
-];
+      "dress", "mirror", "pillow", "bottle", "clock", "window", "flower", "train", "river", "candle",
+      "mask", "radio", "phone", "door", "glass", "hat", "shoe", "book", "key", "teacup",
+      "letter", "rose", "perfume", "waltz", "violin", "balcony", "champagne", "garden", "kiss", "silk",
+      "blush", "handkerchief", "poem", "lullaby", "bouquet", "heart", "embrace", "locket", "chandelier", "petal",
+      "catacomb", "gargoyle", "dagger", "banshee", "raven", "crypt", "veil", "phantom", "shadow", "tomb",
+      "statue", "hollow", "cauldron", "claw", "bone", "flame", "serpent", "grimoire", "noose", "moon",
+      "robot", "drone", "neon", "antenna", "cyborg", "chip", "raygun", "console", "data shard", "satellite",
+      "signal", "laser", "circuit", "hovercraft", "holoscreen", "android", "scanner", "reactor", "portal", "drivesuit"
+    ];
 
     const sounds = [
       "knock","creak","slam","whirr","buzz","hum","crash","drip","snap","rustle",
@@ -128,7 +102,9 @@
       "rebellion","calm","wonder","submission","delight","fear","acceptance","pride","sorrow","ecstasy"
     ];
 
-    function randomChoice(list) { return list[Math.floor(Math.random() * list.length)]; }
+    function randomChoice(list) {
+      return list[Math.floor(Math.random() * list.length)];
+    }
 
     function generate() {
       const object = randomChoice(objects);
@@ -143,7 +119,8 @@
         const object = randomChoice(objects);
         const sound = randomChoice(sounds);
         const mood = randomChoice(moods);
-        results += `${object} + ${sound} + ${mood}\n`;
+        results += `${object} + ${sound} + ${mood}
+`;
       }
       document.getElementById("result").innerText = results;
     }
