--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
       color:#999;
       margin-top:6px;
       font-style:italic;
+      text-align: center;
     }
     h1 {
       font-size: 24px;
@@ -59,7 +60,7 @@
   </style>
 </head>
 <body>
-  <h1>✨ Whimsical Wordplayer ✨</h1>
+  <h1>Whimsical Wordplayer</h1>
   <p class="description">
     A creative spark generator for songwriting. It blends everyday and surreal objects with textured sound words 
     that have a vivid mouthfeel, paired with moods that might not align in obvious ways. Use it as a playful 
